tests/.nts/error/no_instructions.nts
# This file contains only comments and useless lines
  
   

   
 # HEHE